--- a/SaborBrasil/wwwroot/Cadastro.html
+++ b/SaborBrasil/wwwroot/Cadastro.html
@@ -101,7 +101,9 @@
 <body>
     <div class="container">
         <h1>Cadastre-se</h1>
-        <form action="#" method="POST">
+
+        <form asp-controller="UsuarioControllers" asp-action="Cadastrar" method="post" action="/Controllers/UsuarioControllers.cs">
+        
             <div class="form-group">
                 <label for="nome" class="required-field">Nome Completo</label>
                 <input type="text" id="nome" name="nome" required placeholder="Digite seu nome completo">
