--- a/SaborBrasil/wwwroot/Cadastro.html
+++ b/SaborBrasil/wwwroot/Cadastro.html
@@ -102,37 +102,30 @@
     <div class="container">
         <h1>Cadastre-se</h1>
 
-        <form asp-controller="UsuarioControllers" asp-action="Cadastrar" method="post" action="/Controllers/UsuarioControllers.cs">
-        
+        <form action="/Usuario/Cadastrar" method="post">
             <div class="form-group">
                 <label for="nome" class="required-field">Nome Completo</label>
-                <input type="text" id="nome" name="nome" required placeholder="Digite seu nome completo">
+                <input type="text" id="nome" name="Nome" required placeholder="Digite seu nome completo">
             </div>
 
             <div class="form-group">
                 <label for="cpf" class="required-field">CPF</label>
-                <input type="text" id="cpf" name="cpf" required placeholder="Digite seu CPF (somente números)" maxlength="11">
+                <input type="text" id="cpf" name="CPF" required placeholder="Digite seu CPF (somente números)" maxlength="11">
             </div>
 
             <div class="form-group">
                 <label for="telefone" class="required-field">Telefone</label>
-                <input type="tel" id="telefone" name="telefone" required placeholder="Digite seu telefone com DDD">
+                <input type="tel" id="telefone" name="Telefone" required placeholder="Digite seu telefone com DDD">
             </div>
 
             <div class="form-group">
                 <label for="email" class="required-field">E-mail</label>
-                <input type="email" id="email" name="email" required placeholder="Digite seu e-mail">
+                <input type="email" id="email" name="Email" required placeholder="Digite seu e-mail">
             </div>
 
             <div class="form-group">
                 <label for="senha" class="required-field">Senha</label>
-                <input type="password" id="senha" name="senha" required placeholder="Crie uma senha segura" minlength="8">
-                <p class="password-hint">A senha deve conter pelo menos 8 caracteres</p>
-            </div>
-
-            <div class="form-group">
-                <label for="confirmar-senha" class="required-field">Confirmar Senha</label>
-                <input type="password" id="confirmar-senha" name="confirmar-senha" required placeholder="Confirme sua senha">
+                <input type="password" id="senha" name="Senha" required placeholder="Crie uma senha segura" minlength="8">
             </div>
 
             <button type="submit" class="btn-submit">Cadastrar</button>
