pagina de cadastro linkada, falta redirecionamento

--- a/SaborBrasil/wwwroot/index.html
+++ b/SaborBrasil/wwwroot/index.html
@@ -285,7 +285,7 @@
         </button>
         <button
           id="register-btn"
-          onclick="window.location.href='cadastro.html'"
+          onclick="window.location.href='Cadastro.html'"
         >
           Cadastrar
         </button>
