--- a/SaborBrasil/wwwroot/login.html
+++ b/SaborBrasil/wwwroot/login.html
@@ -157,7 +157,7 @@
         </form>
         
         <div class="register-link">
-            Não tem uma conta? <a href="cadastro.html">Cadastre-se</a>
+            Não tem uma conta? <a href="/Cadastro.html">Cadastre-se</a>
         </div>
     </div>
 
