função de like funcionando

--- a/SaborBrasil/wwwroot/Cadastro de Produto.html
+++ b/SaborBrasil/wwwroot/Cadastro de Produto.html
@@ -195,6 +195,7 @@
         e.preventDefault();
 
         const formData = new FormData(postForm);
+        formData.append("UsuarioId", localStorage.getItem("userId"));
 
         try {
           const response = await fetch("/api/publicacoes/Criarpublicacao", {
