--- a/SaborBrasil/wwwroot/login.html
+++ b/SaborBrasil/wwwroot/login.html
@@ -194,6 +194,7 @@
                     // Armazenar o estado de login no localStorage
                     localStorage.setItem('isLoggedIn', 'true'); // Define que o usuário está logado
                     localStorage.setItem('userId', data.idusuario);
+                    localStorage.setItem("userName", data.nome); // 'nome' deve ser o campo retornado pelo backend
                     // Redirecionar após 1 segundo
                     setTimeout(() => {
                         window.location.href = 'index.html'; // Redireciona para o index.html
